; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_content.c_task_push_load_new_core.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_content.c_task_push_load_new_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_PATH_CORE = common dso_local global i32 0, align 4
@CMD_EVENT_LOAD_CORE = common dso_local global i32 0, align 4
@FRONTEND_FORK_CORE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @task_push_load_new_core(i8* %0, i8* %1, i32* %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  %14 = load i32, i32* @RARCH_PATH_CORE, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @path_set(i32 %14, i8* %15)
  %17 = load i32, i32* @CMD_EVENT_LOAD_CORE, align 4
  %18 = call i32 @command_event(i32 %17, i32* null)
  %19 = load i32, i32* @FRONTEND_FORK_CORE, align 4
  %20 = call i32 @frontend_driver_set_fork(i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %26

23:                                               ; preds = %6
  %24 = load i32, i32* %11, align 4
  %25 = call i32 @retroarch_set_current_core_type(i32 %24, i32 1)
  store i32 1, i32* %7, align 4
  br label %26

26:                                               ; preds = %23, %22
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @path_set(i32, i8*) #1

declare dso_local i32 @command_event(i32, i32*) #1

declare dso_local i32 @frontend_driver_set_fork(i32) #1

declare dso_local i32 @retroarch_set_current_core_type(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
